link to github version of kn docs

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -223,102 +223,7 @@ nav:
       - API:
         - Serving: reference/api/serving-api.md
         - Eventing: reference/api/eventing-api.md
-      - Client:
-          - kn: reference/client/kn.md
-          - kn broker:
-            - kn broker: reference/client/kn_broker.md
-            - kn broker create: reference/client/kn_broker_create.md
-            - kn broker delete: reference/client/kn_broker_delete.md
-            - kn broker describe: reference/client/kn_broker_describe.md
-            - kn broker list: reference/client/kn_broker_list.md
-          - kn channel:
-            - kn channel: reference/client/kn_channel.md
-            - kn channel create: reference/client/kn_channel_create.md
-            - kn channel delete: reference/client/kn_channel_delete.md
-            - kn channel describe: reference/client/kn_channel_describe.md
-            - kn channel list: reference/client/kn_channel_list.md
-            - kn channel list-types: reference/client/kn_channel_list-types.md
-          - kn completion: reference/client/kn_completion.md
-          - kn container:
-            - kn container: reference/client/kn_container.md
-            - kn container add: reference/client/kn_container_add.md
-          - kn domain:
-            - kn domain: reference/client/kn_domain.md
-            - kn domain create: reference/client/kn_domain_create.md
-            - kn domain delete: reference/client/kn_domain_delete.md
-            - kn domain describe: reference/client/kn_domain_describe.md
-            - kn domain list: reference/client/kn_domain_list.md
-            - kn domain update: reference/client/kn_domain_update.md
-          - kn options: reference/client/kn_options.md
-          - kn plugin:
-            - kn plugin: reference/client/kn_plugin.md
-            - kn plugin list: reference/client/kn_plugin_list.md
-          - kn revision:
-            - kn revision: reference/client/kn_revision.md
-            - kn revision delete: reference/client/kn_revision_delete.md
-            - kn revision describe: reference/client/kn_revision_describe.md
-            - kn revision list: reference/client/kn_revision_list.md
-          - kn route:
-            - kn route: reference/client/kn_route.md
-            - kn route describe: reference/client/kn_route_describe.md
-            - kn route list: reference/client/kn_route_list.md
-          - kn service:
-            - kn service: reference/client/kn_service.md
-            - kn service apply: reference/client/kn_service_apply.md
-            - kn service create: reference/client/kn_service_create.md
-            - kn service delete: reference/client/kn_service_delete.md
-            - kn service describe: reference/client/kn_service_describe.md
-            - kn service export: reference/client/kn_service_export.md
-            - kn service import: reference/client/kn_service_import.md
-            - kn service list: reference/client/kn_service_list.md
-            - kn service update: reference/client/kn_service_update.md
-          - kn source:
-            - kn source: reference/client/kn_source.md
-            - kn source apiserver:
-              - kn source apiserver: reference/client/kn_source_apiserver.md
-              - kn source apiserver create: reference/client/kn_source_apiserver_create.md
-              - kn source apiserver delete: reference/client/kn_source_apiserver_delete.md
-              - kn source apiserver describe: reference/client/kn_source_apiserver_describe.md
-              - kn source apiserver list: reference/client/kn_source_apiserver_list.md
-              - kn source apiserver update: reference/client/kn_source_apiserver_update.md
-            - kn source binding:
-              - kn source binding: reference/client/kn_source_binding.md
-              - kn source binding create: reference/client/kn_source_binding_create.md
-              - kn source binding delete: reference/client/kn_source_binding_delete.md
-              - kn source binding describe: reference/client/kn_source_binding_describe.md
-              - kn source binding list: reference/client/kn_source_binding_list.md
-              - kn source binding update: reference/client/kn_source_binding_update.md
-            - kn source container:
-              - kn source container: reference/client/kn_source_container.md
-              - kn source container create: reference/client/kn_source_container_create.md
-              - kn source container delete: reference/client/kn_source_container_delete.md
-              - kn source container describe: reference/client/kn_source_container_describe.md
-              - kn source container list: reference/client/kn_source_container_list.md
-              - kn source container update: reference/client/kn_source_container_update.md
-            - kn source list: reference/client/kn_source_list.md
-            - kn source list-types: reference/client/kn_source_list-types.md
-            - kn source ping:
-              - kn source ping: reference/client/kn_source_ping.md
-              - kn source ping create: reference/client/kn_source_ping_create.md
-              - kn source ping delete: reference/client/kn_source_ping_delete.md
-              - kn source ping describe: reference/client/kn_source_ping_describe.md
-              - kn source ping list: reference/client/kn_source_ping_list.md
-              - kn source ping update: reference/client/kn_source_ping_update.md
-            - kn subscription:
-              - kn subscription: reference/client/kn_subscription.md
-              - kn subscription create: reference/client/kn_subscription_create.md
-              - kn subscription delete: reference/client/kn_subscription_delete.md
-              - kn subscription describe: reference/client/kn_subscription_describe.md
-              - kn subscription list: reference/client/kn_subscription_list.md
-              - kn subscription update: reference/client/kn_subscription_update.md
-            - kn trigger:
-              - kn trigger: reference/client/kn_trigger.md
-              - kn trigger create: reference/client/kn_trigger_create.md
-              - kn trigger delete: reference/client/kn_trigger_delete.md
-              - kn trigger describe: reference/client/kn_trigger_describe.md
-              - kn trigger list: reference/client/kn_trigger_list.md
-              - kn trigger update: reference/client/kn_trigger_update.md
-            - kn version: reference/client/kn_version.md
+      - Client: reference/client/README.md
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
     - "Community":
