Build client docs (#4623)
* build kn docs

* navigation tweaks

* link to github version of kn docs

* removing unneeded envvar

* removing go

* style

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -223,6 +223,7 @@ nav:
       - API:
         - Serving: reference/api/serving-api.md
         - Eventing: reference/api/eventing-api.md
+      - Client: reference/client/README.md
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
     - "Community":
