--- a/config/nav.yml
+++ b/config/nav.yml
@@ -209,7 +209,13 @@ nav:
       # Eventing - troubleshooting
       - Troubleshooting:
         - Debugging: eventing/troubleshooting/README.md
-      - Experimental Features: eventing/experimental-features.md
+      - Experimental Features:
+        - About Eventing experimental features: eventing/experimental-features/README.md
+        - DeliverySpec.Timeout field: eventing/experimental-features/delivery-retryafter.md
+        - New Trigger Filters: eventing/experimental-features/new-trigger-filters.md
+        - KReference.Group field: eventing/experimental-features/kreference-group.md
+        - Knative reference mapping: eventing/experimental-features/kreference-mapping.md
+        - Strict Subscriber: eventing/experimental-features/strict-subscriber.md
 ###############################################################################
     # Code samples
 ###############################################################################
