Updated HelloWorld C# sample to the latest 6.0 version #4643

--- a/code-samples/serving/hello-world/helloworld-csharp/Dockerfile
+++ b/code-samples/serving/hello-world/helloworld-csharp/Dockerfile
@@ -1,24 +1,19 @@
 # Use Microsoft's official build .NET image.
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /app
 
-# Install production dependencies.
-# Copy csproj and restore as distinct layers.
+# Copy csproj and restore as distinct layers
 COPY *.csproj ./
 RUN dotnet restore
 
-# Copy local code to the container image.
+# Copy everything else and build
 COPY . ./
-WORKDIR /app
-
-# Build a release artifact.
 RUN dotnet publish -c Release -o out
 
-
-# Use Microsoft's official runtime .NET image.
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS runtime
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-COPY --from=build /app/out ./
+COPY --from=build-env /app/out .
 
 # Run the web service on container startup.
 ENTRYPOINT ["dotnet", "helloworld-csharp.dll"]
