--- a/code-samples/serving/hello-world/helloworld-csharp/helloworld-csharp.csproj
+++ b/code-samples/serving/hello-world/helloworld-csharp/helloworld-csharp.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>helloworld_csharp</RootNamespace>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
 </Project>
