--- a/config/nav.yml
+++ b/config/nav.yml
@@ -10,7 +10,7 @@ nav:
 ###############################################################################
     - Tutorial:
         - Tutorial overview: getting-started/README.md
-        - Set up Knative on a local cluster: getting-started/quickstart-install.md
+        - Install Knative using Quickstart: getting-started/quickstart-install.md
         - Using Knative Serving:
           - First Knative Service: getting-started/first-service.md
           - Scaling to Zero: getting-started/first-autoscale.md
@@ -27,7 +27,6 @@ nav:
 ###############################################################################
     - Installing:
       - About installing Knative: install/README.md
-      - Install using Quickstart: install/quickstart-install.md
       #YAML Installation
       - Install Knative with YAML:
         - About YAML-based installation: install/yaml-install/README.md
@@ -49,6 +48,7 @@ nav:
         - Installing kn: install/client/install-kn.md
         - Customizing kn: install/client/configure-kn.md
         - kn plugins: install/client/kn-plugins.md
+      - Install using Quickstart: install/quickstart-install.md
       # Istio Installation
       - Installing Istio for Knative: install/installing-istio.md
       # Cert-manager Installation
