--- a/config/nav.yml
+++ b/config/nav.yml
@@ -8,8 +8,9 @@ nav:
 ###############################################################################
     # Getting started
 ###############################################################################
-    - Getting started:
-        - Knative Quickstart: getting-started/README.md
+    - Tutorial:
+        - Tutorial introduction: getting-started/README.md
+        - Install Knative using Quickstart: getting-started/quickstart-install.md
         - Using Knative Serving:
           - First Knative Service: getting-started/first-service.md
           - Scaling to Zero: getting-started/first-autoscale.md
