--- a/config/nav.yml
+++ b/config/nav.yml
@@ -49,9 +49,9 @@ nav:
         - Customizing kn: install/client/configure-kn.md
         - kn plugins: install/client/kn-plugins.md
       # Istio Installation
-      - Installing Istio for Knative: install/installing-istio.md
+      - Install Istio for Knative: install/installing-istio.md
       # Cert-manager Installation
-      - Installing cert-manager: install/installing-cert-manager.md
+      - Install cert-manager: install/installing-cert-manager.md
       # Vendor docs
       - Using a Knative-based offering: install/knative-offerings.md
       # Upgrading Knative
