--- a/config/nav.yml
+++ b/config/nav.yml
@@ -48,10 +48,12 @@ nav:
         - Installing kn: install/client/install-kn.md
         - Customizing kn: install/client/configure-kn.md
         - kn plugins: install/client/kn-plugins.md
-      # Istio Installation
-      - Install Istio for Knative: install/installing-istio.md
-      # Cert-manager Installation
-      - Install cert-manager: install/installing-cert-manager.md
+      # Advanced options for Serving
+      - Install advanced options:
+        # Istio Installation
+        - Install Istio for Knative: install/installing-istio.md
+        # Cert-manager Installation
+        - Install cert-manager: install/installing-cert-manager.md
       # Vendor docs
       - Using a Knative-based offering: install/knative-offerings.md
       # Upgrading Knative
