update from mkdocs 7.3.1 to 8.1.10
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,8 @@ markdown_extensions:
   - attr_list
   - meta
   - pymdownx.superfences
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.details
   - pymdownx.snippets:
       base_path: docs/snippets
