Rewording the bits for the knative Kafka broker (#4687)
* :lipstick: Rewording the bits for the knative Kafka broker

Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

* Update docs/eventing/broker/kafka-broker/README.md

Co-authored-by: Samia Nneji <snneji@vmware.com>

Co-authored-by: Samia Nneji <snneji@vmware.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -194,7 +194,7 @@ nav:
           - Creating a Broker: eventing/broker/create-mtbroker.md
           - Triggers: eventing/broker/triggers/README.md
           - Broker configuration example: eventing/broker/example-mtbroker.md
-          - Apache Kafka Broker: eventing/broker/kafka-broker/README.md
+          - Knative Kafka Broker: eventing/broker/kafka-broker/README.md
           - RabbitMQ Broker: eventing/broker/rabbitmq-broker/README.md
         - Accessing CloudEvent traces: eventing/accessing-traces.md
       # Eventing - admin docs
