renamed to testimonials + changed the url and fixed references

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -6,7 +6,7 @@ nav:
     - Eventing: /docs/eventing/
     - Code samples: /docs/samples/
     - Reference: /docs/reference/
-    - About: /docs/about/
+    - About: /docs/about/testimonials
     - "Community": /docs/community/
     - Case studies: /docs/about/case-studies/deepc
   #####################################################
