--- a/config/nav.yml
+++ b/config/nav.yml
@@ -240,7 +240,7 @@ nav:
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
     - About:
-      - Testimonials: about/README.md
+      - Testimonials: about/testimonials.md
     - "Community":
       - Welcome to the community: community/README.md
       - Contribute to Knative: community/contributing.md
