--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -7,7 +7,7 @@ nav:
     - Code samples: /docs/samples/
     - Reference: /docs/reference/
     - "Community": /docs/community/
-    - Case studies: /docs/about/case-studies/deepc
+    - About: /docs/about/testimonials
   #####################################################
     # Blog
   #####################################################
