--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -47,6 +47,7 @@ nav:
           - articles/build-deploy-manage-modern-serverless-workloads-using-knative-on-kubernetes.md
           - articles/set-up-a-local-knative-environment-with-kind.md
       - Steering Committee:
+          - steering/cncf.md
           - steering/knative-cncf-donation.md
           - steering/2021-end-user-election.md
           - steering/2021-12-14-steering-elections-results.md
