--- a/config/redirects.yml
+++ b/config/redirects.yml
@@ -202,3 +202,4 @@ plugins:
       serving/spec/knative-api-specification-1.0.md: https://github.com/knative/specs/blob/main/specs/serving/knative-api-specification-1.0.md
       serving/using-an-ssl-cert/index.md: serving/using-a-tls-cert.md
       serving/using-subroutes.md: serving/traffic-management.md
+      about/case-studies/README.md: about/case-studies/deepc.md
