--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -14,6 +14,7 @@ nav:
     - Blog:
       - index.md
       - Releases:
+          - releases/announcing-knative-v1-3-release.md
           - releases/announcing-knative-v1-2-release.md
           - releases/announcing-knative-v1-1-release.md
           - releases/announcing-knative-v1-0-release.md
