only build main branch for deploy preview
Signed-off-by: Paul S. Schweigert <paulschw@us.ibm.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,10 @@
 [context.deploy-preview]
   publish = "site"
 
+# Envvars for deploy preview
+[context.deploy-preview.environment]
+  BUILD_VERSIONS="no"
+
 [[redirects]]
   from = "/contributing/"
   to = "/docs/community/"
