Update Node.js code samples w/ latest CloudEvents
This commit updates two of the examples in this repository that use the
Node.js CloudEvents module. A newer version of the module has been released
and the examples have been updated to use it. The newer version allows us
to eliminate a dependency on axios, and simplify the example code.

Signed-off-by: Lance Ball <lball@redhat.com>

--- a/code-samples/eventing/writing-event-source-easy-way/package.json
+++ b/code-samples/eventing/writing-event-source-easy-way/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudevents": "^4.0.3",
-    "got": "^11.8.2"
+    "cloudevents": "^6.0.1"
   }
 }
