build all 1.x release branches
Signed-off-by: Paul S. Schweigert <paulschw@us.ibm.com>

--- a/.github/workflows/knative-dot-release-build.yaml
+++ b/.github/workflows/knative-dot-release-build.yaml
@@ -17,7 +17,7 @@ name: Build site for dot releases
 
 on:
   push:
-    branches: [ 'release-1.3' ]
+    branches: [ 'release-1.*' ]
 
 jobs:
   dot-release:
