--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -47,6 +47,7 @@ nav:
           - articles/ko-fast-kubernetes-microservice-development-in-go.md
           - articles/build-deploy-manage-modern-serverless-workloads-using-knative-on-kubernetes.md
           - articles/set-up-a-local-knative-environment-with-kind.md
+          - articles/google-summer-of-code-2022.md
       - Steering Committee:
           - steering/knative-and-endusers.md
           - steering/cncf.md
@@ -63,3 +64,4 @@ nav:
       - Events:
           - events/knative-at-kubecon-eu-2019.md
           - events/knative-at-kubecon-seattle.md
+
