Install fest blog (#4929)
* add install fest blog 04-22

Signed-off-by: Carlos Santana <csantana23@gmail.com>

* add annual report to nav

Signed-off-by: Carlos Santana <csantana23@gmail.com>

* remove unicode

Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -63,6 +63,7 @@ nav:
           - steering/2020-01-annual-report-2019.md
           - steering/2019-12-updates.md
       - Events:
+          - events/install-fest-04-2022.md
           - events/knative-at-kubecon-eu-2019.md
           - events/knative-at-kubecon-seattle.md
 
