--- a/docs/eventing/channels/channels.yaml
+++ b/docs/eventing/channels/channels.yaml
@@ -7,8 +7,8 @@ channels:
     description: >
       In-memory channels are a best effort Channel. They should NOT be used in Production. They are useful for development.
   - name: KafkaChannel
-    url: https://github.com/knative-sandbox/eventing-kafka/tree/{{< branch >}}/pkg/channel/consolidated/README.md
-    status: Proof of Concept
+    url: https://github.com/knative-sandbox/eventing-kafka-broker/tree/{{< branch >}}/README.md
+    status: Beta
     support: None
     description: >
       Channels are backed by [Apache Kafka](http://kafka.apache.org/) topics.
@@ -24,9 +24,3 @@ channels:
     support: None
     description: >
       Channels are backed by [GCP PubSub](https://cloud.google.com/pubsub/).
-  - name: Knative sandbox channel that uses Confluent Go Client, and the librdkafka C library
-    url: https://github.com/knative-sandbox/eventing-kafka
-    status: Proof of Concept
-    support: None
-    description: >
-      Kafka Channel implementation, contributed by SAP's Kyma project, is a Knative Eventing implementation of a Kafka backed channel which provides advanced functionality and production grade qualities.
