add index and EOL
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -49,6 +49,7 @@ nav:
           - articles/build-deploy-manage-modern-serverless-workloads-using-knative-on-kubernetes.md
           - articles/set-up-a-local-knative-environment-with-kind.md
       - Steering Committee:
+          - steering/toc-2022-election-announcement.md
           - steering/2022-04-14-annual-report-2021.md
           - steering/knative-and-endusers.md
           - steering/cncf.md
