--- a/config/nav.yml
+++ b/config/nav.yml
@@ -240,10 +240,10 @@ nav:
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
       - Security: reference/security/README.md
-    - Community:
-      - Welcome to the community: community/README.md
-      - Contribute to Knative: community/contributing.md
-      - About the community: community/about.md
+    - Contributing:
+      - Welcome to the Knative community: contributing/README.md
+      - Contribute to Knative: contributing/contributing.md
+      - About the community: contributing/about.md
     - About:
       - Testimonials: about/testimonials.md
       - Case studies:
